# django-template

./: .flake8  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
config/: settings.py
profile.d/: aliasses.sh  poetry.sh
